--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,5 +1,7 @@
 repositories {
     jcenter()
+    mavenCentral()
+    google()
 }
 
 apply plugin: 'groovy'
@@ -11,7 +13,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'com.android.tools.build:gradle:2.3.3'
+    implementation 'com.android.tools.build:gradle:3.3.2'
 
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude group:'org.codehaus.groovy'
